# text2binary

./: Cargo.toml  LICENSE  README.md
src/: lib.rs
tests/: lib.rs  target.txt  target2.txt
